data/derived/comb/progs/unify/prog6534.ml.out
Characters 62-68:
  |buildY->buildY()
           ^^^^^^
Error: This expression has type expr
       This is not a function; it cannot be applied.
